--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ .Site.Title }}</title>
+
     <link rel="stylesheet" href="app.css">
     <script src="app.js"></script>
     <script src="https://use.fontawesome.com/eb5b863b4b.js"></script>
